# vk_mmc_hackathon

./: .gitignore  README.md  profpath_streamlit_app.py  pyproject.toml  submission.csv
.codex_pydeps/numpy-2.4.5.dist-info/: RECORD
data/: sub_test.csv
digital_propathologist_mvp/: README.md  app.py  requirements.txt
digital_propathologist_mvp/.streamlit/: config.toml
digital_propathologist_mvp/data/: demo_sample.csv  review_state.json
digital_propathologist_mvp/digital_propathologist/: __init__.py  exports.py  highlighting.py  ml_model.py  parsing.py  prediction_stub.py  recommendations.py  report_29n_1015531300.txt  review_state.py  types.py  ui_html.py
experiments/: README.md  index.yml
experiments/001_baseline_tfidf_logreg/: inference.py  info.yml  metrics.json  params.yml  train.py
experiments/002_autonomous_tuned/: conclusions.md  inference.py  info.yml  metrics.json  params.yml  submission.csv  train.py  validation_predictions.csv
experiments/003_retrieval_positive_cases/: conclusions.md  info.yml  metrics.json  params.yml  submission.csv  train.py  validation_predictions.csv
experiments/004_hybrid_grouped_ranker/: conclusions.md  info.yml  metrics.json  params.yml  submission.csv  train.py  validation_predictions.csv
experiments/005_conservative_tfidf/: conclusions.md  info.yml  metrics.json  (+4 more)
scripts/: analyze_medical_csv.js  print_analysis_summary.js  print_train_record.py  print_train_record_by_patient.py  train_factor_baseline.py
tests/: test_analyzer.py  test_api.py  test_digital_propathologist_ui.py  test_profpath.py  test_service.py
(+73 files in other folders)
